fixed overlap of journal entries

--- a/react-app/src/components/Journals/Journals.css
+++ b/react-app/src/components/Journals/Journals.css
@@ -1,7 +1,5 @@
 #journals {
    position: absolute;
-   /* width: 22rem;
-   height: 44rem; */
    height: 72vh;
    width: 20vw;
    border: 1px solid #707070;
